--- a/Weather.Api/appsettings.Development.json
+++ b/Weather.Api/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "WebConfig": {
+    "CorsAllowedOrigins": [ "http://localhost:3000" ]
+  },
+  "OpenWeatherMapConfig": {
+    "ApiKeys": [
+      "8b7535b42fe1c551f18028f64e8688f7",
+      "9f933451cebf1fa39de168a29a4d9a79"
+    ],
+    "ApiUrl": "https://api.openweathermap.org/data/2.5/weather"
   }
 }
